<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AuthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameApp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="40sp"
            android:text="@string/app_name">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_person_2_24"
                android:ems="10"
                android:hint="@string/login"
                android:text="student"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="@color/cardview_shadow_start_color">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@drawable/baseline_password_24"
                android:ems="10"
                android:hint="@string/password"
                android:text="secret"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="@color/cardview_shadow_start_color">
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/sign_in" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>