<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context=".activity.DetailsFragmentPost">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit"
        style="@style/Widget.AppTheme.NormalButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/common_pading"
        android:contentDescription="@string/post_share"
        app:icon="@drawable/ic_baseline_mode_edit_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete"
        style="@style/Widget.AppTheme.NormalButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/common_pading"
        android:contentDescription="@string/post_share"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintStart_toEndOf="@id/edit"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/forward"
        style="@style/Widget.AppTheme.NormalButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/common_pading"
        android:contentDescription="@string/post_share"
        app:icon="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <ImageView
        android:id="@+id/avatar"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:padding="4dp"
        android:layout_marginBottom="@dimen/common_pading"
        android:contentDescription="@string/post_avatar"
        android:src="@drawable/post_avatar_drawable"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/common_pading"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_pading"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="" />

    <TextView
        android:id="@+id/editContent"
        android:padding="@dimen/common_pading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_pading"
        android:autoLink="web"
        android:paddingBottom="@dimen/common_pading"

        app:layout_constraintTop_toTopOf="@id/barrierTop"
        app:layout_constraintBottom_toTopOf="@id/videoContent"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@sample/posts.json/data/content" />

    <ImageView
        android:id="@+id/videoContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/common_pading"
        android:src="@drawable/ic_play_circle_filled_24"
        app:layout_constraintTop_toBottomOf="@id/editContent"

        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="editContent,videoContent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/videoContent"
        android:layout_margin="@dimen/common_pading"
        android:checkable="true"
        android:contentDescription="@string/post_like"
        android:insetTop="0dp"
        android:paddingTop="0dp"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintTop_toTopOf="@id/barrier_icon" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_pading"
        android:contentDescription="@string/post_share"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/barrier_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/countView"
        style="@style/Widget.AppTheme.NormalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_pading"
        android:layout_marginEnd="@dimen/common_pading"
        android:ellipsize="end"
        android:enabled="false"
        android:singleLine="true"
        app:icon="@drawable/ic_baseline_eye_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier_icon"
        tools:text="5" />




</androidx.constraintlayout.widget.ConstraintLayout>